AppTest y build.gradle modificados como en la issue 12